fixing safari browser bar overlap on iphone

--- a/Styles/landingPage.css
+++ b/Styles/landingPage.css
@@ -6,7 +6,7 @@
 /* styles */
 #landingPage{
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     background: rgb(2,0,36);
     background: linear-gradient(152deg, rgba(2,0,36,1) 0%, rgba(154,154,154,1) 50%, rgba(255,255,255,1) 100%);
     background-image: url('../Images/IMG_2594.JPG');
